# benchmark-rs

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: bench-workloads.rs  benchmark-example.rs  benchmark_analysis_example.rs  benchmark_example.rs  find-regressions.rs
src/: analysis_result.rs  benchmark.rs  benchmark_comparison.rs  benchmarks.rs  disk_usage.rs  lib.rs  run_summary.rs  series_summary.rs  stopwatch.rs  summary.rs
tests/: test_bench.rs  test_error_types.rs
tests/fixtures/1.5K/: 1K  512
