[package]
name = "benchmark-rs"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Benchamrks for Rust libraries"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/benchmark-rs"
readme = "README.md"
keywords = ["benchmark"]
categories = ["development-tools::profiling"]
version = "0.0.7-alpha"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
json = "0.12.4"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
statrs = "0.16.0"
num-traits = "0.2.15"

[dev-dependencies]
rand = "0.8.5"
thiserror = "1.0.40"
